# zeddy

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  color.rs  generate.rs  main.rs  schema.rs  util.rs
src/cli/: commands.rs  paths.rs
src/color/: color.rs  palette.rs
src/generate/: json.rs  kdl.rs  serialize_kdl.rs
src/schema/: json.rs  kdl.rs
